fix: prevent overflow on smaller screens

--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -7,6 +7,7 @@
   background-color: var(--gray-400);
   border-radius: 8px;
   margin-bottom: .875rem;
+
 }
 
 .taskWrapper > button,
@@ -33,7 +34,8 @@
 .taskContent {
   padding-left: .875rem;
   padding-right: .875rem;
-  color: var(--gray-100)
+  color: var(--gray-100);
+  word-break: break-all;
 }
 
 .scratchText {
